implementing navigation drawer and adding images

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!-- Navigation drawer colors -->
+    <color name="list_item_title">#484848</color>
+    <color name="list_background">#ffffff</color>
+    <color name="list_background_pressed">#cfcfcf</color>
+    <color name="list_divider">#9f9d9d</color>
+    <color name="counter_text_bg">#626262</color>
+    <color name="counter_text_color">#c5c4c4</color>
 </resources>
