--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Activities.LoginActivity"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="#ffffff">
 
     <!-- Login progress -->
     <ProgressBar
@@ -23,8 +24,9 @@
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="199dp"
-        android:layout_weight="0.17">
+        android:layout_height="match_parent"
+        android:layout_weight="0.17"
+        android:background="#ffffff">
 
         <LinearLayout
             android:id="@+id/email_login_form"
@@ -32,56 +34,67 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <android.support.design.widget.TextInputLayout
+
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <AutoCompleteTextView
-                android:id="@+id/email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_email"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:singleLine="true"/>
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_password"
-                android:imeActionId="@+id/login"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionUnspecified"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:singleLine="true"/>
-
-            </android.support.design.widget.TextInputLayout>
+                android:layout_height="220dp"
+                android:id="@+id/imageView"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/wahlzeit_logo"
+                android:cropToPadding="false" />
 
             <Button
-                android:id="@+id/email_sign_in_button"
+                android:id="@+id/button_signin_user"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
-                android:textStyle="bold"/>
+                android:text="Sign in as user"
+                android:textStyle="bold"
+                android:background="#0066cc"
+                android:textColor="#ffffff" />
+
+            <Button
+                style="?android:textAppearanceSmall"
+                android:id="@+id/button_signin_administrator"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Sign in as administrator"
+                android:textStyle="bold"
+                android:layout_gravity="center_horizontal"
+                android:background="#0066cc"
+                android:textColor="#ffffff" />
+
+            <Button
+                style="?android:textAppearanceSmall"
+                android:id="@+id/button_signin_guest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Sign in as guest"
+                android:textStyle="bold"
+                android:layout_gravity="center_horizontal"
+                android:background="#0066cc"
+                android:textColor="#ffffff" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="About"
+                android:id="@+id/button"
+                android:layout_gravity="center_horizontal"
+                android:onClick="onClickGetAboutButton"
+                android:layout_marginTop="16dp" />
 
         </LinearLayout>
     </ScrollView>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="About"
-        android:id="@+id/button"
-        android:layout_gravity="center_horizontal"
-        android:onClick="onClickGetAboutButton" />
+    <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="New Button"-->
+        <!--android:id="@+id/button2"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:onClick="onClickGetPhotosButton" />-->
 </LinearLayout>
