--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,21 +6,29 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.android.loginwithgmail.HomeActivity">
 
-    <TextView
-        android:id="@+id/textViewTitle"
-        android:text="Home Page"
+    <!--<TextView-->
+        <!--android:id="@+id/textViewTitle"-->
+        <!--android:text="Home Page"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:textSize="24sp"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="24sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        />
 
     <TextView
         android:id="@+id/textViewNameLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textViewTitle"
+        android:layout_below="@+id/imageView1"
         android:layout_marginTop="15dp"
         android:text="Name:"
         android:textSize="18sp" />
@@ -30,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/textViewNameLabel"
-        android:layout_below="@+id/textViewTitle"
+        android:layout_below="@+id/imageView1"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="10dp"
         android:textSize="18sp" />
@@ -74,12 +82,5 @@
         android:layout_marginTop="15dp"
         android:layout_marginLeft="10dp"
         android:textSize="18sp" />
-
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@id/textViewTitle" />
 
 </RelativeLayout>
