--- a/app/src/main/res/layout/fragment_tell.xml
+++ b/app/src/main/res/layout/fragment_tell.xml
@@ -14,7 +14,7 @@
     <ImageView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/txtLabel"
-        android:src="@drawable/ic_share_black_24dp"
+        android:src="@drawable/ic_tell"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"/>
 
