--- a/app/src/main/res/layout/fragment_show.xml
+++ b/app/src/main/res/layout/fragment_show.xml
@@ -11,5 +11,20 @@
         android:padding = "20dp"
         android:clipChildren="false"
         android:clipToPadding="false"
-        />
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/done_text_en"
+            android:fontFamily="sans-serif"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:padding="10dp"
+            android:id="@+id/textView_done"
+
+            android:gravity="center|center_horizontal" />
+    </com.wenchao.cardstack.CardStack>
+
+
 </LinearLayout>
