rename and refactor layouts

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="220dp"
-                android:id="@+id/imageView"
+                android:id="@+id/imageview_logo"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/wahlzeit_logo"
                 android:cropToPadding="false" />
@@ -89,12 +89,4 @@
 
         </LinearLayout>
     </ScrollView>
-
-    <!--<Button-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="New Button"-->
-        <!--android:id="@+id/button2"-->
-        <!--android:layout_gravity="center_horizontal"-->
-        <!--android:onClick="onClickGetPhotosButton" />-->
 </LinearLayout>
