--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,22 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.android.loginwithgmail.HomeActivity">
-
-    <!--<TextView-->
-        <!--android:id="@+id/textViewTitle"-->
-        <!--android:text="Home Page"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:textSize="24sp"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" />-->
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/imageview_profile_pic_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -24,63 +16,69 @@
         />
 
     <TextView
-        android:id="@+id/textViewNameLabel"
+        android:id="@+id/textview_name_label_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/imageView1"
+        android:layout_below="@+id/imageview_profile_pic_home"
         android:layout_marginTop="15dp"
         android:text="Name:"
-        android:textSize="18sp" />
+        android:fontFamily="sans-serif-medium"
+        android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/textViewNameValue"
+        android:id="@+id/textview_name_value_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/textViewNameLabel"
-        android:layout_below="@+id/imageView1"
+        android:layout_toRightOf="@+id/textview_name_label_home"
+        android:layout_below="@+id/imageview_profile_pic_home"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="10dp"
-        android:textSize="18sp" />
+        android:fontFamily="sans-serif"
+        android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/textViewEmailLabel"
+        android:id="@+id/textview_email_label_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textViewNameLabel"
+        android:layout_below="@+id/textview_name_label_home"
         android:layout_marginTop="15dp"
         android:text="Email:"
-        android:textSize="18sp" />
+        android:fontFamily="sans-serif-medium"
+        android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/textViewEmailValue"
+        android:id="@+id/textview_email_value_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/textViewEmailLabel"
-        android:layout_below="@+id/textViewNameLabel"
+        android:layout_toRightOf="@+id/textview_email_label_home"
+        android:layout_below="@+id/textview_name_label_home"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="10dp"
-        android:textSize="18sp" />
+        android:fontFamily="sans-serif"
+        android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/textViewGenderLabel"
+        android:id="@+id/textview_gender_label_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textViewEmailLabel"
+        android:layout_below="@+id/textview_email_label_home"
         android:layout_marginTop="15dp"
         android:text="Gender:"
-        android:textSize="18sp" />
+        android:fontFamily="sans-serif-medium"
+        android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/textViewGenderValue"
+        android:id="@+id/textview_gender_value_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/textViewGenderLabel"
-        android:layout_below="@+id/textViewEmailLabel"
+        android:layout_toRightOf="@+id/textview_gender_label_home"
+        android:layout_below="@+id/textview_email_label_home"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="10dp"
-        android:textSize="18sp" />
+        android:fontFamily="sans-serif"
+        android:textSize="16sp"/>
 
 </RelativeLayout>
