--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,22 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:id="@+id/txtLabel"
+    <ImageView
+        android:id="@+id/imageview_profile_pic_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:textSize="16dp"
-        android:text="Profile View"/>
-
-    <ImageView android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txtLabel"
-        android:src="@drawable/ic_profile"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"/>
+        />
+
+    <TextView
+        android:id="@+id/textview_name_label_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/imageview_profile_pic_profile"
+        android:fontFamily="sans-serif-medium"
+        android:layout_marginTop="15dp"
+        android:text="Name:"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/textview_name_value_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/textview_name_label_profile"
+        android:layout_below="@+id/imageview_profile_pic_profile"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="10dp"
+        android:textSize="16sp"
+        android:fontFamily="sans-serif"
+        android:clickable="true"/>
+
+    <TextView
+        android:id="@+id/textview_email_label_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textview_name_label_profile"
+        android:layout_marginTop="15dp"
+        android:text="Email:"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/textview_email_value_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/textview_email_label_profile"
+        android:layout_below="@+id/textview_name_label_profile"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="10dp"
+        android:fontFamily="sans-serif"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/textview_gender_label_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textview_email_label_profile"
+        android:layout_marginTop="15dp"
+        android:text="Gender:"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/textview_gender_value_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/textview_gender_label_profile"
+        android:layout_below="@+id/textview_email_label_profile"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="10dp"
+        android:fontFamily="sans-serif"
+        android:textSize="16sp"
+        android:clickable="true"/>
 
 
 </RelativeLayout>
