--- a/app/src/main/res/layout/fragment_show.xml
+++ b/app/src/main/res/layout/fragment_show.xml
@@ -14,6 +14,7 @@
         >
 
         <TextView
+            android:id="@+id/textview_done_show"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/done_text_en"
@@ -21,8 +22,6 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:padding="10dp"
-            android:id="@+id/textView_done"
-
             android:gravity="center|center_horizontal" />
     </com.wenchao.cardstack.CardStack>
 
