--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:clickable="true"
+    android:focusableInTouchMode="true">
 
     <ImageView
         android:id="@+id/imageview_profile_pic_profile"
@@ -26,62 +28,155 @@
         android:text="Name:"
         android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/textview_name_value_profile"
+    <ViewSwitcher
+        android:id="@+id/switcher_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/textview_name_label_profile"
         android:layout_below="@+id/imageview_profile_pic_profile"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="10dp"
-        android:textSize="16sp"
-        android:fontFamily="sans-serif"
-        android:clickable="true"/>
+        android:layout_marginLeft="50dp">
 
-    <TextView
-        android:id="@+id/textview_email_label_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textview_name_label_profile"
-        android:layout_marginTop="15dp"
-        android:text="Email:"
-        android:fontFamily="sans-serif-medium"
-        android:textSize="16sp" />
+        <TextView
+            android:id="@+id/textview_name_value_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif"
+            android:clickable="true"
+            />
 
-    <TextView
-        android:id="@+id/textview_email_value_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/textview_email_label_profile"
-        android:layout_below="@+id/textview_name_label_profile"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="10dp"
-        android:fontFamily="sans-serif"
-        android:textSize="16sp" />
+        <EditText
+            android:id="@+id/edittext_name_value_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:singleLine="true"
+            android:inputType="textNoSuggestions"
+            android:imeOptions="actionDone"/>
+    </ViewSwitcher>
+
 
     <TextView
         android:id="@+id/textview_gender_label_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textview_email_label_profile"
+        android:layout_below="@+id/textview_name_label_profile"
         android:layout_marginTop="15dp"
         android:text="Gender:"
         android:fontFamily="sans-serif-medium"
         android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/textview_gender_value_profile"
+    <Spinner
+        android:id="@+id/spinner_gender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/textview_gender_label_profile"
+        android:layout_alignLeft="@id/switcher_name"
+        android:layout_below="@+id/textview_name_label_profile"
+        android:layout_marginTop="15dp"/>
+
+    <TextView
+        android:id="@+id/textview_language_label_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textview_gender_label_profile"
+        android:layout_marginTop="15dp"
+        android:text="Language:"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="16sp" />
+
+    <!--<ViewSwitcher-->
+        <!--android:id="@+id/switcher_language"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignLeft="@id/switcher_name"-->
+        <!--android:layout_below="@+id/textview_gender_label_profile"-->
+        <!--android:layout_marginTop="15dp">-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/textview_language_value_profile"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:fontFamily="sans-serif"-->
+            <!--android:textSize="16sp"-->
+            <!--android:clickable="true"/>-->
+        <!--<EditText-->
+            <!--android:id="@+id/edittext_language_value_profile"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@android:color/transparent"-->
+            <!--android:singleLine="true"-->
+            <!--android:inputType="textNoSuggestions"-->
+            <!--android:imeOptions="actionDone"/>-->
+    <!--</ViewSwitcher>-->
+
+    <Spinner
+        android:id="@+id/spinner_language"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/switcher_name"
+        android:layout_below="@+id/textview_gender_label_profile"
+        android:layout_marginTop="15dp"/>
+
+    <TextView
+        android:id="@+id/textview_email_label_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textview_language_label_profile"
+        android:layout_marginTop="15dp"
+        android:text="Email:"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="16sp" />
+
+
+    <TextView
+        android:id="@+id/textview_email_value_profile"
+        android:layout_alignLeft="@id/switcher_name"
+        android:layout_below="@+id/textview_language_label_profile"
+        android:layout_marginTop="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif"
+        android:textSize="16sp" />
+
+
+    <TextView
+        android:id="@+id/textview_notify_label_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_below="@+id/textview_email_label_profile"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="10dp"
-        android:fontFamily="sans-serif"
+        android:text="Notify abot praise:"
+        android:fontFamily="sans-serif-medium"
         android:textSize="16sp"
-        android:clickable="true"/>
+        android:nestedScrollingEnabled="false" />
 
+    <Switch
+        android:id="@+id/switch_notify_value_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/textview_email_label_profile"
+        android:layout_marginTop="15dp"
+        />
+
+    <Button
+        android:id="@+id/button_update_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textview_notify_label_profile"
+        android:layout_marginTop="35dp"
+        android:text="Update Profile"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-medium"
+        android:layout_centerHorizontal="true"
+        android:background="#3f51b5"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp" />
 
 </RelativeLayout>
