--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin">
 
+
     <ImageView
         android:id="@+id/imageview_profile_pic_home"
         android:layout_width="wrap_content"
@@ -33,7 +34,7 @@
         android:layout_toRightOf="@+id/textview_name_label_home"
         android:layout_below="@+id/imageview_profile_pic_home"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="50dp"
         android:fontFamily="sans-serif"
         android:textSize="16sp" />
 
@@ -52,10 +53,9 @@
         android:id="@+id/textview_email_value_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/textview_email_label_home"
         android:layout_below="@+id/textview_name_label_home"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="10dp"
+        android:layout_alignLeft="@id/textview_name_value_home"
         android:fontFamily="sans-serif"
         android:textSize="16sp" />
 
@@ -74,10 +74,9 @@
         android:id="@+id/textview_gender_value_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/textview_gender_label_home"
         android:layout_below="@+id/textview_email_label_home"
+        android:layout_alignLeft="@id/textview_name_value_home"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="10dp"
         android:fontFamily="sans-serif"
         android:textSize="16sp"/>
 
