add multilingual support

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,23 +48,25 @@
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Sign in as user"
+                android:layout_marginTop="86dp"
+                android:text="@string/sign_in"
                 android:textStyle="bold"
+                android:textSize="16sp"
+                android:fontFamily="sans-serif-medium"
                 android:background="#0066cc"
                 android:textColor="#ffffff" />
 
-            <Button
-                style="?android:textAppearanceSmall"
-                android:id="@+id/button_signin_administrator"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Sign in as administrator"
-                android:textStyle="bold"
-                android:layout_gravity="center_horizontal"
-                android:background="#0066cc"
-                android:textColor="#ffffff" />
+            <!--<Button-->
+                <!--style="?android:textAppearanceSmall"-->
+                <!--android:id="@+id/button_signin_administrator"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="16dp"-->
+                <!--android:text="Sign in as administrator"-->
+                <!--android:textStyle="bold"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:background="#0066cc"-->
+                <!--android:textColor="#ffffff" />-->
 
             <Button
                 style="?android:textAppearanceSmall"
@@ -72,11 +74,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Sign in as guest"
+                android:text="@string/continue_as_guest"
                 android:textStyle="bold"
+                android:textSize="16sp"
+                android:fontFamily="sans-serif-medium"
                 android:layout_gravity="center_horizontal"
-                android:background="#0066cc"
-                android:textColor="#ffffff" />
+                android:background="@android:color/transparent"
+                android:textColor="#0066cc" />
 
             <Button
                 android:layout_width="wrap_content"
