--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,7 +25,7 @@
         android:layout_below="@+id/imageview_profile_pic_profile"
         android:fontFamily="sans-serif-medium"
         android:layout_marginTop="15dp"
-        android:text="Name:"
+        android:text="@string/name"
         android:textSize="16sp" />
 
     <ViewSwitcher
@@ -64,7 +64,7 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textview_name_label_profile"
         android:layout_marginTop="15dp"
-        android:text="Gender:"
+        android:text="@string/gender"
         android:fontFamily="sans-serif-medium"
         android:textSize="16sp" />
 
@@ -83,7 +83,7 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textview_gender_label_profile"
         android:layout_marginTop="15dp"
-        android:text="Language:"
+        android:text="@string/language"
         android:fontFamily="sans-serif-medium"
         android:textSize="16sp" />
 
@@ -102,7 +102,7 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textview_language_label_profile"
         android:layout_marginTop="15dp"
-        android:text="Email:"
+        android:text="@string/email"
         android:fontFamily="sans-serif-medium"
         android:textSize="16sp" />
 
@@ -125,7 +125,7 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textview_email_label_profile"
         android:layout_marginTop="15dp"
-        android:text="Notify abot praise:"
+        android:text="@string/notify_about_praise"
         android:fontFamily="sans-serif-medium"
         android:textSize="16sp"
         android:nestedScrollingEnabled="false" />
@@ -145,7 +145,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textview_notify_label_profile"
         android:layout_marginTop="35dp"
-        android:text="Update Profile"
+        android:text="@string/update_profile"
         android:textColor="@android:color/white"
         android:textStyle="bold"
         android:fontFamily="sans-serif-medium"
