--- a/app/src/main/res/layout/list_header.xml
+++ b/app/src/main/res/layout/list_header.xml
@@ -33,7 +33,7 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/imageview_profile_pic_home"
             android:layout_marginTop="15dp"
-            android:text="Name:"
+            android:text="@string/name"
             android:fontFamily="sans-serif-medium"
             android:textSize="16sp" />
 
@@ -55,7 +55,7 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textview_name_label_home"
             android:layout_marginTop="15dp"
-            android:text="Email:"
+            android:text="@string/email"
             android:fontFamily="sans-serif-medium"
             android:textSize="16sp" />
 
@@ -76,7 +76,7 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textview_email_label_home"
             android:layout_marginTop="15dp"
-            android:text="Gender:"
+            android:text="@string/email"
             android:fontFamily="sans-serif-medium"
             android:textSize="16sp" />
 
