--- a/app/src/main/res/layout/card_content.xml
+++ b/app/src/main/res/layout/card_content.xml
@@ -15,6 +15,7 @@
 
         <TextView
             android:id="@+id/textview_title_card"
+            android:textAlignment="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="24sp"
@@ -26,7 +27,6 @@
             tools:text="Photo by USERNAME" />
 
         <View
-            android:id="@+id/divider_title"
             android:layout_width="fill_parent"
             android:layout_height="2dp"
             android:layout_below="@id/textview_title_card"
@@ -34,12 +34,35 @@
             />
 
         <ImageView
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:scaleType="fitStart"
             android:id="@+id/imageview_photo"
             android:adjustViewBounds="true"
              />
+
+        <View
+            android:layout_marginTop="5dp"
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:layout_below="@id/textview_title_card"
+            android:background="@color/card_outline"
+            />
+
+        <TextView
+            android:id="@+id/adf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="14sp"
+            android:textColor="@android:color/secondary_text_dark"
+            android:fontFamily="sans-serif-condensed"
+            android:layout_gravity="center_horizontal"
+            android:padding="5dp"
+            tools:text="Praise it!"/>
+
+
 
         <RatingBar
             android:layout_marginTop="5dp"
