--- a/app/src/main/res/layout/fragment_home_photo_list_item.xml
+++ b/app/src/main/res/layout/fragment_home_photo_list_item.xml
@@ -154,68 +154,68 @@
         </LinearLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="4">
-            <Button
-                android:id="@+id/button_edit_home"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/edit"
-                android:textColor="#3f51b5"
-                android:textStyle="bold"
-                android:fontFamily="sans-serif-medium"
-                android:layout_centerHorizontal="true"
-                android:background="@android:color/transparent"
-                android:paddingLeft="3dp"
-                android:paddingRight="3dp"
-                />
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:weightSum="4">-->
+            <!--<Button-->
+                <!--android:id="@+id/button_edit_home"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="1"-->
+                <!--android:text="@string/edit"-->
+                <!--android:textColor="#3f51b5"-->
+                <!--android:textStyle="bold"-->
+                <!--android:fontFamily="sans-serif-medium"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:background="@android:color/transparent"-->
+                <!--android:paddingLeft="3dp"-->
+                <!--android:paddingRight="3dp"-->
+                <!--/>-->
 
-            <Button
-                android:id="@+id/button_tell_home"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/tell"
-                android:textColor="#3f51b5"
-                android:textStyle="bold"
-                android:fontFamily="sans-serif-medium"
-                android:layout_centerHorizontal="true"
-                android:background="@android:color/transparent"
-                android:paddingLeft="3dp"
-                android:paddingRight="3dp"
-                />
+            <!--<Button-->
+                <!--android:id="@+id/button_tell_home"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="1"-->
+                <!--android:text="@string/tell"-->
+                <!--android:textColor="#3f51b5"-->
+                <!--android:textStyle="bold"-->
+                <!--android:fontFamily="sans-serif-medium"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:background="@android:color/transparent"-->
+                <!--android:paddingLeft="3dp"-->
+                <!--android:paddingRight="3dp"-->
+                <!--/>-->
 
-            <Button
-                android:id="@+id/button_select_home"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/select"
-                android:textColor="#3f51b5"
-                android:textStyle="bold"
-                android:fontFamily="sans-serif-medium"
-                android:layout_centerHorizontal="true"
-                android:background="@android:color/transparent"
-                android:paddingLeft="3dp"
-                android:paddingRight="3dp"
-                />
+            <!--<Button-->
+                <!--android:id="@+id/button_select_home"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="1"-->
+                <!--android:text="@string/select"-->
+                <!--android:textColor="#3f51b5"-->
+                <!--android:textStyle="bold"-->
+                <!--android:fontFamily="sans-serif-medium"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:background="@android:color/transparent"-->
+                <!--android:paddingLeft="3dp"-->
+                <!--android:paddingRight="3dp"-->
+                <!--/>-->
 
-            <Button
-                android:id="@+id/button_delete_home"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/delete"
-                android:textColor="#3f51b5"
-                android:textStyle="bold"
-                android:fontFamily="sans-serif-medium"
-                android:layout_centerHorizontal="true"
-                android:background="@android:color/transparent"
-                />
-        </LinearLayout>
+            <!--<Button-->
+                <!--android:id="@+id/button_delete_home"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="1"-->
+                <!--android:text="@string/delete"-->
+                <!--android:textColor="#3f51b5"-->
+                <!--android:textStyle="bold"-->
+                <!--android:fontFamily="sans-serif-medium"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:background="@android:color/transparent"-->
+                <!--/>-->
+        <!--</LinearLayout>-->
 
     </LinearLayout>
 
